<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PartsDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CarDetails">

        <ImageView
            android:id="@+id/partImageDetail"
            android:layout_width="294dp"
            android:layout_height="236dp"
            android:layout_marginStart="58dp"
            android:layout_marginTop="78dp"
            android:layout_marginEnd="59dp"
            android:layout_marginBottom="417dp"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/partNameDetail"
            android:layout_width="390dp"
            android:layout_height="99dp"
            android:layout_marginStart="9dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="9dp"
            android:text="@string/car_name"
            android:textAlignment="center"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/partImageDetail" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="85dp"
            android:layout_height="33dp"
            android:text="@string/go_back"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.098"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="93dp"
            android:layout_height="35dp"
            android:text="@string/home"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.203"
            app:layout_constraintStart_toEndOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="109dp"
            android:layout_height="32dp"
            android:text="@string/go_web"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.611"
            app:layout_constraintStart_toEndOf="@+id/textView4" />

        <TextView
            android:id="@+id/partPriceDetails"
            android:layout_width="129dp"
            android:layout_height="60dp"
            android:layout_marginTop="83dp"
            android:text="@string/car_price"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.943"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/partNameDetail"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="72dp"
            android:layout_height="64dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="292dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/go_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.945"
            app:srcCompat="@android:drawable/ic_menu_revert" />

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="80dp"
            android:layout_height="67dp"
            android:contentDescription="@string/home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.946"
            app:srcCompat="@mipmap/ic_launcher"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/webButton"
            android:layout_width="79dp"
            android:layout_height="64dp"
            android:background="#FF0000"
            android:contentDescription="@string/go_web"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.897"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.947"
            app:srcCompat="@android:drawable/ic_menu_set_as" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>